WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265193
REGRESSION (simplified-min-width-handler): [IFC] Hanging trailing whitespace needs line builder
https://bugs.webkit.org/show_bug.cgi?id=265193
Summary
REGRESSION (simplified-min-width-handler): [IFC] Hanging trailing whitespace ...
alan
Reported
2023-11-21 06:38:26 PST
ssia
Attachments
Patch
(1.84 KB, patch)
2023-11-21 06:41 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.21 KB, patch)
2023-11-21 06:45 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-11-21 06:41:23 PST
Created
attachment 468711
[details]
Patch
alan
Comment 2
2023-11-21 06:45:08 PST
Created
attachment 468712
[details]
[fast-cq]Patch
EWS
Comment 3
2023-11-21 09:25:29 PST
Committed
271020@main
(62f37bdfd33b): <
https://commits.webkit.org/271020@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468712
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-11-21 09:26:15 PST
<
rdar://problem/118690803
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug