REGRESSION (simplified-min-width-handler): [IFC] Hanging trailing whitespace needs line builder https://bugs.webkit.org/show_bug.cgi?id=265193

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::isEligibleForNonLineBuilderProcess):
(WebCore::Layout::IntrinsicWidthHandler::simplifiedMinimumWidth const):

Canonical link: https://commits.webkit.org/271020@main